[dependencies]
cosmwasm-std = {version = "1.0.0-beta3", features = ["stargate"]}
cw-storage-plus = {version = "0.11.1"}
cw-utils = {version = "0.11.1"}
cw2 = {version = "0.11.1"}
cw20 = {version = "0.11.1"}
hex = {version = "0.3.1"}
schemars = {version = "0.8.1"}
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
sha2 = {version = "0.8.0"}
thiserror = {version = "1.0.23"}
protobuf = { version = "2", features = ["with-bytes"] }

[dev-dependencies]
cosmwasm-schema = {version = "1.0.0-beta3"}

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[lib]
crate-type = ["cdylib", "rlib"]

[package]
edition = "2021"
license = "Apache-2.0"
name = "ics101"
version = "0.1.0"