[package]
name = "ics101"
version = "0.1.3"
edition = "2021"

[dependencies]
cosmwasm-std = {version = "1.2.1", features = ["stargate"]}
cw-storage-plus = {version = "1.0.1"}
cw-utils = {version = "1.0.1"}
cw2 = {version = "1.0.1"}
cw20 = {version = "1.0.1"}
hex = {version = "0.3.1"}
schemars = {version = "0.8.1"}
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
sha2 = {version = "0.8.0"}
thiserror = {version = "1.0.23"}
protobuf = { version = "2", features = ["with-bytes"] }
base64 = "0.21.7" 
[dev-dependencies]
cosmwasm-schema = {version = "1.2.1"}

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[lib]
crate-type = ["cdylib", "rlib"]
