[package]
name = "vesting"
version = "0.1.0"
edition = "2021"
description = "Vest tokens"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { version = "1.0.1" }
cw2 = { version = "1.0.1" }
cw20 = { version = "1.0.1" }
cosmwasm-std = { version = "1.0.0-beta3", features = ["stargate"] }
cw-storage-plus = { version = "1.0.1" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
hex = "0.3.1"
sha2 = "0.8.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }