[package]
name = "ve-side"
version = "1.0.0"
authors = ["Amit Yadav"]
edition = "2021"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = "0.15"
cw20 = "0.15"
cw20-base = { version = "0.15", features = ["library"] }
cosmwasm-std = "1.1"
cw-storage-plus = "0.15"
thiserror = { version = "1.0" }
cosmwasm-schema = "1.1"

[dev-dependencies]
cw-multi-test = "0.15"
anyhow = "1"
proptest = "1.0"
